{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "LeftHandController",
            "id": "5141572a-202f-4912-80b9-78e1b92c385b",
            "actions": [
                {
                    "name": "Trigger",
                    "type": "Button",
                    "id": "d887de7d-bdf0-41fd-83f8-0e3738b31e45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grip",
                    "type": "Button",
                    "id": "4b66a89d-558c-4b34-97c9-5e29b31e9d99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryButton",
                    "type": "Button",
                    "id": "7264b9c7-f71c-4957-9044-fc9f3e980abe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryButton",
                    "type": "Button",
                    "id": "76d7e40a-dd95-41a6-966a-0df1ed64366c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "56a30aa1-7a65-447f-aa57-26eb897bd67e",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "740f1c72-9d5b-4a5e-87f0-089b56df8622",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThumbStick",
                    "type": "Value",
                    "id": "7bacbe6e-5c2d-4784-a801-ac1387775697",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "259a4227-14d4-4e85-afe4-159b0ddfeef6",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4db27cdc-6a66-4bd5-995b-7953f0459070",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa8d890b-0013-48fe-b69a-f81dc410a619",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "414f0e89-c91d-4c4f-bc87-52191dd5d86e",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2971d4a-9ab5-4db3-9b00-570fe2dfe40f",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9322f788-7d27-471d-ae1d-f23887acd64d",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e4cefd4-8f04-4fc0-8ba5-1916943f156f",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RightHandController",
            "id": "6e8f48f8-bd90-447a-9b84-a9530513148e",
            "actions": [
                {
                    "name": "Trigger",
                    "type": "Button",
                    "id": "d3c0ccc3-0a1f-4daa-8ba5-4949555121e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grip",
                    "type": "Button",
                    "id": "fd1eb0d9-67f8-4d73-8e53-2c62ebad292e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryButton",
                    "type": "Button",
                    "id": "51070f5a-5d57-4bc2-9c18-a0e3db1f38a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryButton",
                    "type": "Button",
                    "id": "915aa38a-5332-42dd-8169-e43bb63a1f93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "cc1752af-211e-474e-a25a-a6342c48e131",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "2c7d92d5-e43d-4163-932e-d82652c6f197",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThumbStick",
                    "type": "Value",
                    "id": "555e12a0-97c2-4898-a394-6c142830aad3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0fec8deb-cb6f-4403-b999-ddb89a0c3bf7",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e02b6ee-7cd2-4b45-9718-04377881ec17",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10c1749c-6038-452a-a01a-7727ea2b3e68",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26dfc480-c65a-4f54-90cb-f9d92ac61af1",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88181094-4c21-47d7-8540-91f3f4207702",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "247076fd-b3bc-4b9c-9b7f-42403bbc8b2f",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d606081d-8f68-4248-ab28-f965a7c0455b",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Headset",
            "id": "99269c33-a604-4bef-be20-cecf8ca189af",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "01822631-2fa6-439d-bcdb-bb71ac2fa008",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "6f3da410-dfcb-46e5-8700-bf34aebdbbbe",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c89dff89-51c1-410c-936f-e15a1c6c450f",
                    "path": "<XRHMD>/centerEyeRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13bf0fc5-b3f0-4a76-bc67-15a9a575777d",
                    "path": "<XRHMD>/centerEyePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Oculus",
            "bindingGroup": "Oculus",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}